[metadata]
name = mathplug
version = 0.0.1
author = Jordan Welsman
author_email = jordan.welsman@outlook.com
description = A lightweight Python package which supplies simple math functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JordanWelsman/mathplug
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find: